changed the data set. a little better now.

--- a/africaTESTOR.html
+++ b/africaTESTOR.html
@@ -78,11 +78,11 @@
 
 <!-- testing AngularJS insertion-->
 
-		<div ng-controller="RegionEvents as region">
+		<div ng-controller="MissionsEvents as missions">
 			<div class="container">
 				<section ng-controller="PanelController as panel">
 					<div class="panel panel-default">
-						<h3 class="panel-heading" ng-cloak>{{region.event.country}}</h3>
+						<h3 class="panel-heading" ng-cloak>{{missions.event.region.country}}</h3>
 						<ul ng-cloak class="nav nav-pills" >
 							<li class="panel" ng-class="{active:panel.isSelected(1)}">
 								<a href ng-click="panel.selectTab(1)">Information</a></li>
@@ -92,22 +92,22 @@
 								<a href ng-click="panel.selectTab(3)">Sending Organization</a></li>
 						</ul>
 						<div ng-cloak class="panel-body" ng-show="panel.isSelected(1)">
-							<h4>Name: <small>{{region.event.name}}</small></h4>
-							<h4>Departure Date: <small>{{region.event.start}}</small></h4>
-							<h4>Return Date: <small>{{region.event.end}}</small></h4>
-							<h4>Description: <small>{{region.event.description}}</small></h4>
-							<h4>Annual Event: <small>{{region.event.annual}}</small></h4>
+							<h4>Name:<small>{{missions.event.region.name}}</small></h4>
+							<h4>Departure Date:<small>{{missions.event.region.start}}</small></h4>
+							<h4>Return Date:<small>{{missions.event.region.end}}</small></h4>
+							<h4>Description:<small>{{missions.event.region.description}}</small></h4>
+							<h4>Annual Event:<small>{{missions.event.region.annual}}</small></h4>
 						</div>
-						<div ng-cloak class="panel-body" ng-controller="ChurchEvents as church" ng-show="panel.isSelected(2)">
-							<h4>Church: <small>{{church.event.name}}</small></h4>
-							<h4>Contact email: <small>{{church.event.email}}</small></h4>						
-							<h4>Address:<small> {{church.event.address}}, {{church.event.city}}, {{church.event.state}}, {{church.event.zipcode}}</small></h4>
-							<h4>website: <small><a href="http://{{church.event.website}}">{{church.event.website}}</a></small></h4>
+						<div ng-cloak class="panel-body" ng-show="panel.isSelected(2)">
+							<h4>Church:<small>{{missions.event.church.name}}</small></h4>
+							<h4>Contact email:<small>{{missions.event.church.email}}</small></h4>						
+							<h4>Address:<small> {{missions.event.church.address}}, {{missions.event.church.city}}, {{missions.event.church.state}}, {{missions.event.church.zipcode}}</small></h4>
+							<h4>website:<small><a href="http://{{missions.event.church.website}}">{{missions.event.church.website}}</a></small></h4>
 						</div>
-						<div ng-cloak class="panel-body" ng-controller="SendingOrganization as sender" ng-show="panel.isSelected(3)">
-							<h4>Sending Organization: <small>{{sender.event.name}}</small></h4>
-							<h4>email <small>{{sender.event.email}}</small></h4>
-							<h4>website: <small><a href="http://{{sender.event.website}}">{{sender.event.website}}</a></small></h4>
+						<div ng-cloak class="panel-body" ng-show="panel.isSelected(3)">
+							<h4>Sending Organization:<small>{{missions.event.sendingOrg.name}}</small></h4>
+							<h4>email:<small>{{missions.event.sendingOrg.email}}</small></h4>
+							<h4>website:<small><a href="http://{{missions.event.sendingOrg.website}}">{{missions.event.sendingOrg.website}}</a></small></h4>
 						</div>
 						<h3 class="panel-heading">Ukraine</h3>
 						<div class="panel-body">
