--- a/africaTESTOR.html
+++ b/africaTESTOR.html
@@ -83,7 +83,7 @@
 				<section ng-controller="PanelController as panel">
 					<div class="panel panel-default">
 						<h2 class="panel-heading" ng-cloak>{{missions.event.journeys.country}}</h2>
-						<ul ng-cloak class="nav nav-pills" >
+						<ul ng-cloak class="nav nav-tabs" >
 							<li class="panel" ng-class="{active:panel.isSelected(1)}">
 								<a href ng-click="panel.selectTab(1)">Information</a></li>
 							<li class="panel" ng-class="{active:panel.isSelected(2)}">
