further testing, but this makes for ugly code...

--- a/africaTESTOR.html
+++ b/africaTESTOR.html
@@ -100,9 +100,9 @@
 						</div>
 						<div ng-cloak class="panel-body" ng-show="panel.isSelected(2)">
 							<h4>Church:<small> {{missions.event.church[{{missions.event.journeys[1].church}}].name}}</small></h4>
-							<h4>Contact email:<small> {{missions.event.church.email}}</small></h4>						
-							<h4>Address:<small> {{missions.event.church.address}}, {{missions.event.church.city}}, {{missions.event.church.state}}, {{missions.event.church.zipcode}}</small></h4>
-							<h4>website:<small><a href="http://{{missions.event.church.website}}"> {{missions.event.church.website}}</a></small></h4>
+							<h4>Contact email:<small> {{missions.event.church[{{missions.event.journeys[1].church}}].email}}</small></h4>						
+							<h4>Address:<small> {{missions.event.church[{{missions.event.journeys[1].church}}].address}}, {{missions.event.church[{{missions.event.journeys[1].church}}].city}}, {{missions.event.church[{{missions.event.journeys[1].church}}].state}}, {{missions.event.church[{{missions.event.journeys[1].church}}].zipcode}}</small></h4>
+							<h4>website:<small><a href="http://{{missions.event.church.website}}"> {{missions.event.church[{{missions.event.journeys[1].church}}].website}}</a></small></h4>
 						</div>
 						<div ng-cloak class="panel-body" ng-show="panel.isSelected(3)">
 							<h4>Sender:<small> {{missions.event.sendingOrg.name}}</small></h4>
