--- a/africaTESTOR.html
+++ b/africaTESTOR.html
@@ -99,10 +99,10 @@
 							<h4>Annual Event:<small> {{missions.event.journeys[0].annual}}</small></h4>
 						</div>
 						<div ng-cloak class="panel-body" ng-show="panel.isSelected(2)">
-							<h4>Church:<small> {{missions.event.church.name}}</small></h4>
-							<h4>Contact email:<small> {{missions.event.church.email}}</small></h4>						
-							<h4>Address:<small> {{missions.event.church.address}}, {{missions.event.church.city}}, {{missions.event.church.state}}, {{missions.event.church.zipcode}}</small></h4>
-							<h4>website:<small><a href="http://{{missions.event.church.website}}"> {{missions.event.church.website}}</a></small></h4>
+							<h4>Church:<small> {{missions.event.church[missions.event.journeys[0].church].name}}</small></h4>
+							<h4>Contact email:<small> {{missions.event.church[0].email}}</small></h4>						
+							<h4>Address:<small> {{missions.event.church[0].address}}, {{missions.event.church[0].city}}, {{missions.event.church[0].state}}, {{missions.event.church[0].zipcode}}</small></h4>
+							<h4>website:<small><a href="http://{{missions.event.church[0].website}}"> {{missions.event.church[0].website}}</a></small></h4>
 						</div>
 						<div ng-cloak class="panel-body" ng-show="panel.isSelected(3)">
 							<h4>Sender:<small> {{missions.event.sendingOrg.name}}</small></h4>
