forgot an "-es"

--- a/africaTESTOR.html
+++ b/africaTESTOR.html
@@ -99,7 +99,7 @@
 							<h4>Annual Event:<small> {{missions.event.journeys[0].annual}}</small></h4>
 						</div>
 						<div ng-cloak class="panel-body" ng-show="panel.isSelected(2)">
-							<h4>Church:<small> {{missions.event.church[missions.event.journeys[0].church].name}}</small></h4>
+							<h4>Church:<small> {{missions.event.church[missions.event.journeys[0].churches].name}}</small></h4>
 							<h4>Contact email:<small> {{missions.event.church[0].email}}</small></h4>						
 							<h4>Address:<small> {{missions.event.church[0].address}}, {{missions.event.church[0].city}}, {{missions.event.church[0].state}}, {{missions.event.church[0].zipcode}}</small></h4>
 							<h4>website:<small><a href="http://{{missions.event.church[0].website}}"> {{missions.event.church[0].website}}</a></small></h4>
