--- a/africaTESTOR.html
+++ b/africaTESTOR.html
@@ -99,10 +99,10 @@
 							<h4>Annual Event:<small> {{missions.event.journeys[0].annual}}</small></h4>
 						</div>
 						<div ng-cloak class="panel-body" ng-show="panel.isSelected(2)">
-							<h4>Church:<small> {{missions.event.church[missions.event.journeys[0].churches].name}}</small></h4>
-							<h4>Contact email:<small> {{missions.event.church[missions.event.journeys[0].churches].email}}</small></h4>						
-							<h4>Address:<small> {{missions.event.church[missions.event.journeys[0].churches].address}}, {{missions.event.church[missions.event.journeys[0].churches].city}}, {{missions.event.church[missions.event.journeys[0].churches].state}}, {{missions.event.church[missions.event.journeys[0].churches].zipcode}}</small></h4>
-							<h4>website:<small><a href="http://{{missions.event.church[missions.event.journeys[0].churches].website}}"> {{missions.event.church[missions.event.journeys[0].churches].website}}</a></small></h4>
+							<h4>Church:<small> {{missions.event.church[missions.event.journeys[0].church].name}}</small></h4>
+							<h4>Contact email:<small> {{missions.event.church[missions.event.journeys[0].church].email}}</small></h4>						
+							<h4>Address:<small> {{missions.event.church[missions.event.journeys[0].church].address}}, {{missions.event.church[missions.event.journeys[0].church].city}}, {{missions.event.church[missions.event.journeys[0].church].state}}, {{missions.event.church[missions.event.journeys[0].church].zipcode}}</small></h4>
+							<h4>website:<small><a href="http://{{missions.event.church[missions.event.journeys[0].church].website}}"> {{missions.event.church[missions.event.journeys[0].church].website}}</a></small></h4>
 						</div>
 						<div ng-cloak class="panel-body" ng-show="panel.isSelected(3)">
 							<h4>Sender:<small> {{missions.event.sendingOrg[missions.event.journeys[0].sendingOrg].name}}</small></h4>
