--- a/angularTESTOR.html
+++ b/angularTESTOR.html
@@ -68,9 +68,10 @@
 
 
 <!-- testing AngularJS insertion-->
-		<journey-panels>
-		</journey-panels>
-		
+		<div class="container" ng-controller="MissionsEvents as missions">
+			<journey-panels>
+			</journey-panels>
+		</div>
 			
 <!-- ending AngularJS -->
 			
@@ -99,10 +100,10 @@
 	      	</div>      			
 		</footer>
 		<script src="http://code.jquery.com/jquery.js"></script>
-		<script src="js/angular.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/custom.js"></script>
-		<script src="js/appTESTOR.js"></script>
+		<script src="/js/angular.min.js"></script>
+		<script src="/js/bootstrap.min.js"></script>
+		<script src="/js/custom.js"></script>
+		<script src="/js/appTESTOR.js"></script>
 		<!-- <script>App.init();</script> -->
 	</body>
 </html>
