little by little

--- a/angularTESTOR.html
+++ b/angularTESTOR.html
@@ -71,6 +71,8 @@
 		<div class="container" ng-controller="MissionsEvents as missions">
 			<journey-panels>
 			</journey-panels>
+			<journey-panels>
+			</journey-panels>
 		</div>
 			
 <!-- ending AngularJS -->
