--- a/africaTESTOR.html
+++ b/africaTESTOR.html
@@ -90,10 +90,10 @@
 							<h4>Annual Event:<small> {{missions.event.journeys[2].annual}}</small></h4>
 						</div>
 						<div ng-cloak class="panel-body" ng-show="panel.isSelected(2)">
-							<h4>Church:<small> {{missions.event.church[missions.event.journeys[2].church].name}}</small></h4>
-							<h4>Contact email:<small> {{missions.event.church[missions.event.journeys[2].church].email}}</small></h4>						
-							<h4>Address:<small> {{missions.event.church[missions.event.journeys[2].church].address}}, {{missions.event.church[missions.event.journeys[2].church].city}}, {{missions.event.church[missions.event.journeys[2].church].state}}, {{missions.event.church[missions.event.journeys[2].church].zipcode}}</small></h4>
-							<h4>website:<small><a href="http://{{missions.event.church[missions.event.journeys[2].church].website}}"> {{missions.event.church[missions.event.journeys[2].church].website}}</a></small></h4>
+							<h4>Church:<small> {{missions.event.churches[missions.event.journeys[2].church].name}}</small></h4>
+							<h4>Contact email:<small> {{missions.event.churches[missions.event.journeys[2].church].email}}</small></h4>						
+							<h4>Address:<small> {{missions.event.churches[missions.event.journeys[2].church].address}}, {{missions.event.churches[missions.event.journeys[2].church].city}}, {{missions.event.churches[missions.event.journeys[2].church].state}}, {{missions.event.churches[missions.event.journeys[2].church].zipcode}}</small></h4>
+							<h4>website:<small><a href="http://{{missions.event.churches[missions.event.journeys[2].church].website}}"> {{missions.event.churches[missions.event.journeys[2].church].website}}</a></small></h4>
 						</div>
 						<div ng-cloak class="panel-body" ng-show="panel.isSelected(3)">
 							<h4>Sender:<small> {{missions.event.sendingOrg[missions.event.journeys[2].sendingOrg].name}}</small></h4>
